--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,5 +12,5 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: docker build -t 19127098/nest-app .
-    - run: docker login -u ${{secrets.DOCKER_HUB_USERNAME}} --password {{secrets.DOCKER_HUB_PASSWORD}}
+    - run: docker login -u ${{secrets.DOCKER_HUB_USERNAME}} -p {{secrets.DOCKER_HUB_PASSWORD}}
     - run: docker push 19127098/nest-app
