--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,4 +21,4 @@ jobs:
     - uses: actions/checkout@v3
     - run: sudo docker pull 19127098/nest-app
     - run: sudo docker rm -f app
-    - run: sudo docker run -d -p 80:80 19127098/nest-app
+    - run: sudo docker run -d -p 80:80 --name app 19127098/nest-app
