--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,7 +16,7 @@ jobs:
     - run: docker push 19127098/nest-app
   run:
     runs-on: self-hosted
-    
+    needs: deploy
     steps:
     - uses: actions/checkout@v3
     - run: sudo docker pull 19127098/nest-app
